# FaceSnap

./: .cursorignore  .env.example  .gitignore  README.md  docker-run.txt  package.json
.cursor/rules/: myrules.mdc
backend/: __init__.py  main.py  pyproject.toml  requirements.txt  requirements_musa.txt  run.py
backend/app/: __init__.py
backend/app/api/v1/endpoints/: categories.py  detect.py  faces.py  personnel.py
backend/app/core/: __init__.py  config.py  models.py
backend/app/services/: detection.py  personnel.py  recognition.py
backend/app/utils/: image.py
backend/config/: settings.py
backend/scripts/: init_database.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/Personnel/: index.tsx
frontend/src/pages/PersonnelCategories/: index.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
